# tandc

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analyze.py  compare.py  summary.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/tests/: conftest.py  test_api_analyze.py  test_api_summary.py  test_application_startup.py  test_config.py  test_database_operations.py  test_dependencies.py  test_main.py  test_models.py  test_redis_operations.py
